# demos-codes

./: .gitmodules  README.md
codes/: README.md
codes/1.Precise Robot Dual-Arm Manipulation A Monocular RGB- Camera-Based Teleoperation System/: .gitignore  AITEPose.py  AITEPoseV2.py  AITEPoseV3.py  README.md  cam_utils.py  dataset_calibration.py  dataset_process.py  environment.yml  filter.py  hci copy.py  hci.py  hci_anchor.py  hci_anchor_data.py  hci_anchor_data_i.py  hci_anchor_k_pick.py  hci_anchor_k_pick2.py  hci_anchor_k_pick2_V3.py  hci_anchor_k_pick_V2.py  hci_anchor_k_pick_V3.py  hci_anchor_kalman.py  hci_sm_k_pick_v5 .py  hci_sm_k_pick_v6.py  hci_sm_k_pick_v7.py  hci_sm_k_pick_v8.py  hci_sm_k_pick_v9.py  hci_sm_k_v4.py  hci_sm_k_v5.py  hci_smooth.py  infer.py  kalman_filter.py  motion_capture.py  vio_smooth.py  visualize_3d.py
codes/2.Experiment for mobile robot connectivity control game/: README.md  TAC-code.c
codes/3.Output Feedback Control of Uncertain Euler–Lagrange Systems by Internal Model/: README.md  run_planner.sh
codes/4.ius_uav-master/: README.md
codes/5.nmpc_traj-master/: README.md  tracker_mpc.c
codes/6.robot_arm_gripper-master/: README.en.md  README.md
codes/6.robot_arm_gripper-master/classic/: CMakeLists.txt  package.xml
codes/6.robot_arm_gripper-master/classic/launch/: gazebo.launch
codes/6.robot_arm_gripper-master/classic/meshes/: link1.STL  moduan.STL
codes/6.robot_arm_gripper-master/classic/urdf/: classic.csv  classic.urdf
codes/ius_uav-master/: .gitignore  README.md  docker_start.sh  play_bag.sh  (+1 more)
demo-movies/: README.md
(+348 files in other folders)
